# BasicRTOS

./: .gitignore  CMakeLists.txt  README.md  basicFreeRTOS.sh
.github/workflows/: ci.yml
basicFreeRTOS/: CMakeLists.txt
inc/: circular_linked_list.h  heap.h  kernel.h  list.h  task.h
src/: circular_linked_list.c  heap.c  kernel.c  task.c
stmf411re/: .mxproject  CMakeLists.txt  stmf411re.ioc
stmf411re/Core/Src/: main.c
stmf411re/Middleware/basicFreeRTOS/inc/: FreeRTOSConfig.h  list.h  portable.h  task.h
stmf411re/Middleware/basicFreeRTOS/src/: list.c  port.c  task.c
stmf411re/Middleware/inc/: task.h
stmf411re/Middleware/src/: task.c
test/: CMakeLists.txt
test/heap/: CMakeLists.txt  main.c
test/stmf411re/: .mxproject  CMakeLists.txt
tests/: CMakeLists.txt
tests/list/: CMakeLists.txt
tests/list/inc/: utils.h
tests/list/src/: main.c  utils.c
